--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -1,9 +1,23 @@
+.index_zhiding{
+    padding: 10rpx 10rpx;
+    display: flex;
+    image{
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
+    }
+}
+
+
 .index_swiper{
     swiper{
         width: 750rpx;
         height: 340rpx;
+        padding: 10rpx 10rpx;
         image{
             width: 100%;
+            height: 100%;
         }
     }
 }
@@ -12,7 +26,7 @@
 .index_cate{
     display: flex;
     navigator{
-        padding: 20rpx;
+        padding: 10rpx 10rpx;
         flex: 1;
         image{
             width: 100%;
@@ -24,12 +38,13 @@
 
     .floor_group{
         .floor_title{
-            padding: 10rpx 0;
+            padding: 10rpx 10rpx;
            image{
                width: 100%;
            } 
         }
         .floor_list{
+            padding: 10rpx 10rpx;
             navigator{
                 // 清除浮动
                 overflow: hidden;
