--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,6 +2,13 @@
   <!-- 搜索框 开始 -->
   <Searchinput></Searchinput>
   <!-- 搜索框 结束 -->
+
+  <!-- 置顶图片开始 -->
+  <view class="index_zhiding">
+  <image mode="widthFix" src="https://zmcm.oss-cn-zhangjiakou.aliyuncs.com/top.jpg"></image>
+  </view>
+  <!-- 置顶图片结束 -->
+
   <!-- 轮播图 开始 -->
   <view class="index_swiper">
   <!-- 
