--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -17,7 +17,6 @@
         padding: 10rpx 10rpx;
         image{
             width: 100%;
-            height: 100%;
         }
     }
 }
@@ -28,6 +27,11 @@
     navigator{
         padding: 10rpx 10rpx;
         flex: 1;
+        text{
+            justify-content: center;
+            display: flex;
+            color: var(--themeColor);
+        }
         image{
             width: 100%;
         }
@@ -49,22 +53,22 @@
                 // 清除浮动
                 overflow: hidden;
                 float: left;
-                width: 33.33%;
+                width: 50%;
 
             /* 后四个超链接 */
-            &:nth-last-child(-n+4){
-                /* 原图的宽高 232 *386 */
-                // 232 / 386 = 33.33vw / height
-                // 第一张图片的高度 height: 33.33vw * 386 / 232;
-                height: 33.33vw * 386 / 232 / 2 ;
-                border-left: 10rpx solid #fff;
-            }
+            // &:nth-last-child(-n+4){
+            //     /* 原图的宽高 232 *386 */
+            //     // 232 / 386 = 33.33vw / height
+            //     // 第一张图片的高度 height: 33.33vw * 386 / 232;
+            //     height: 33.33vw * 386 / 232 / 2 ;
+            //     border-left: 10rpx solid #fff;
+            // }
 
             /* 2 3 两个超链接 */
-            &:nth-child(2),
-            &:nth-child(3){
-                border-bottom: 10rpx solid #fff;
-            }
+            // &:nth-child(2),
+            // &:nth-child(3){
+            //     border-bottom: 10rpx solid #fff;
+            // }
                 image{
                     width: 100%;
                     height: 100%;
