--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -15,7 +15,6 @@
 }
 .index_swiper swiper image {
   width: 100%;
-  height: 100%;
 }
 .index_cate {
   display: flex;
@@ -23,6 +22,11 @@
 .index_cate navigator {
   padding: 10rpx 10rpx;
   flex: 1;
+}
+.index_cate navigator text {
+  justify-content: center;
+  display: flex;
+  color: var(--themeColor);
 }
 .index_cate navigator image {
   width: 100%;
@@ -39,18 +43,9 @@
 .index_floor .floor_group .floor_list navigator {
   overflow: hidden;
   float: left;
-  width: 33.33%;
+  width: 50%;
   /* 后四个超链接 */
   /* 2 3 两个超链接 */
-}
-.index_floor .floor_group .floor_list navigator:nth-last-child(-n+4) {
-  /* 原图的宽高 232 *386 */
-  height: 27.72711207vw;
-  border-left: 10rpx solid #fff;
-}
-.index_floor .floor_group .floor_list navigator:nth-child(2),
-.index_floor .floor_group .floor_list navigator:nth-child(3) {
-  border-bottom: 10rpx solid #fff;
 }
 .index_floor .floor_group .floor_list navigator image {
   width: 100%;
