--- a/pages/category/index.wxml
+++ b/pages/category/index.wxml
@@ -26,12 +26,13 @@
                     <text class="delimiter">/</text>
                 </view>
                 <view class="goods_list">
+                    <!-- url="/pages/goods_list/index?cid={{item2.cat_id}}"  -->
                     <navigator
                     wx:for="{{item1.children}}"
                     wx:for-index="index2"
                     wx:for-item="item2"
                     wx:key="cat_id"
-                    url="/pages/goods_list/index?cid={{item2.cat_id}}"
+                    url="/pages/goods_detail/index?goods_id={{item2.cat_id}}"
                     >
                     <image mode="widthFix" src="{{item2.cat_icon}}"></image>
                     <view class="goods_name">{{item2.cat_name}}</view>
