--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -55,9 +55,11 @@
                 </view>
             </view>
             <!-- 收获地址管理 -->
-            <view class="address_wrap">
-                收获地址管理
+            <!-- <view class="address_wrap">
+                <navigator url="/pages/address/address" class="app_info_item">收货地址管理</navigator>
             </view>
+            -->
+          
             <!-- 应用信息相关 -->
             <view class="app_info_wrap">
                 <view class="app_info_item app_info_contact">
