--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,6 +3,7 @@
   display: flex;
 }
 .index_zhiding image {
+  border-radius: 15rpx;
   align-items: center;
   justify-content: center;
   height: 100%;
@@ -44,10 +45,28 @@
   overflow: hidden;
   float: left;
   width: 50%;
-  /* 后四个超链接 */
-  /* 2 3 两个超链接 */
+  /* 后五个超链接 */
+  /* 1 2 3 4 四个超链接 */
+  /* 2 4 6 三个超链接 */
+}
+.index_floor .floor_group .floor_list navigator:nth-last-child(-n+5) {
+  /* 原图的宽高 232 *386 */
+  height: 450rpx ;
+}
+.index_floor .floor_group .floor_list navigator:nth-child(1) {
+  height: 450rpx ;
+}
+.index_floor .floor_group .floor_list navigator:nth-child(1),
+.index_floor .floor_group .floor_list navigator:nth-child(2),
+.index_floor .floor_group .floor_list navigator:nth-child(3),
+.index_floor .floor_group .floor_list navigator:nth-child(4) {
+  border-bottom: 10rpx solid #fff;
+}
+.index_floor .floor_group .floor_list navigator:nth-child(2),
+.index_floor .floor_group .floor_list navigator:nth-child(4),
+.index_floor .floor_group .floor_list navigator:nth-child(6) {
+  border-left: 10rpx solid #fff;
 }
 .index_floor .floor_group .floor_list navigator image {
   width: 100%;
-  height: 100%;
 }
