--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -4,15 +4,7 @@ page {
 .cates {
   height: 100%;
 }
-.cates .cates_container {
-  /* less 中使用calc的时候要注意*/
-  height: calc( 100vh - 90rpx );
-  display: flex;
-}
-.cates .cates_container .left_menu {
-  /* 子项 高度 100% */
-}
-.cates .cates_container .left_menu .menu_item {
+.cates .menu_item {
   height: 80rpx;
   display: flex;
   justify-content: center;
