--- a/pages/categoryBook/index.wxss
+++ b/pages/categoryBook/index.wxss
@@ -4,32 +4,24 @@ page {
 .cates {
   height: 100%;
 }
-.cates .cates_container {
-  /* less 中使用calc的时候要注意*/
-  height: calc( 100vh - 90rpx );
-  display: flex;
-}
-.cates .cates_container .right_content {
-  /* 子项 高度 100% */
-}
-.cates .cates_container .right_content .goods_group .goods_title {
+.cates .goods_group .goods_title {
   height: 80rpx;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.cates .cates_container .right_content .goods_group .goods_title .delimiter {
+.cates .goods_group .goods_title .delimiter {
   color: #ccc;
   padding: 0 10rpx;
 }
-.cates .cates_container .right_content .goods_group .goods_list {
+.cates .goods_group .goods_title .goods_list {
   display: flex;
   flex-wrap: wrap;
 }
-.cates .cates_container .right_content .goods_group .goods_list navigator {
+.cates .goods_group .goods_title .goods_list navigator {
   width: 50%;
   text-align: center;
 }
-.cates .cates_container .right_content .goods_group .goods_list navigator image {
+.cates .goods_group .goods_title .goods_list navigator image {
   width: 100%;
 }
