--- a/pages/category/index.less
+++ b/pages/category/index.less
@@ -3,11 +3,34 @@ page{
 }
 .cates{
     height: 100%;
-            .menu_item{
-                height: 80rpx;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                font-size: 30rpx;
+    .container{
+        padding: 10rpx 10rpx;
+            navigator{
+                // 清除浮动
+                overflow: hidden;
+                float: left;
+                width: 50%;
+
+            &:nth-child(1),
+            &:nth-child(2){
+                border-bottom: 10rpx solid #fff;
             }
-      }
+            
+            &:nth-child(2),
+            &:nth-child(5),
+            &:nth-child(7),
+            &:nth-child(9){
+                border-left: 10rpx solid #fff;
+            }
+                image{
+                    width: 100%;
+                }
+            }
+        .text{
+            justify-content: center;
+            display: flex;
+            color: var(--themeColor);
+        }
+    }
+}
+
