--- a/pages/categoryBook/index.less
+++ b/pages/categoryBook/index.less
@@ -3,47 +3,26 @@ page{
 }
 .cates{
     height: 100%;
-        // .left_menu{
-        //     /* 子项 高度 100% */
-        //     // flex: 2;
-
-        //     .menu_item{
-        //         height: 80rpx;
-        //         display: flex;
-        //         justify-content: center;
-        //         align-items: center;
-        //         font-size: 30rpx;
-        //     }
-        //     .active{
-        //         color: var(--themeColor);
-        //         border-left: 5px solid currentColor;
-        //     }
-        // }
             .goods_group{
-            .goods_title{
-                height: 80rpx;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                .delimiter{
-                    color: #ccc;
-                    padding: 0 10rpx;
-                }
-                .title{}
                 .goods_list{
                     display: flex;
                     flex-wrap: wrap;
                         
+                    padding: 10rpx 10rpx;
                     navigator{
                         width: 50%;
                         text-align: center;
+                        overflow: hidden;
+                        float: left;
+
                         image{
                             width: 100%;
                         }
-                        .goods_name{}
+                        .goods_name{
+
+                        }
                     }
                 }
                 
             }
         }
-    }
