--- a/pages/categoryBook/index.wxml
+++ b/pages/categoryBook/index.wxml
@@ -1,16 +1,17 @@
 <view class="cates">
     <Searchinput></Searchinput>
             <view class="goods_group"
-            wx:for="{{rightContent}}"
-            wx:for-index="index1"
-            wx:for-item="item1"
             >
                 <view class="goods_list">
                     <!-- url="/pages/goods_list/index?cid={{item2.cat_id}}"  -->
                     <navigator
+                    wx:for="{{rightContent}}"
+                    wx:for-index="index1"
+                    wx:for-item="item1"
+                    wx:key="id"
                     url="/pages/goods_detail/index?goods_id={{item1.id}}"
                     >
-                    <image mode="widthFix" src="{{item1.mainImgUrl}}"></image>
+                    <image mode="{{index1===0?'widthFix':'scaleToFill'}}" src="{{item1.mainImgUrl}}"></image>
                     <view class="goods_name">{{item1.name}}</view>
                     </navigator>
                 </view>
