--- a/pages/user/index.less
+++ b/pages/user/index.less
@@ -91,11 +91,19 @@ page{
                 }
             }
         }
-        .address_wrap{
+        .app_vip_wrap{
             margin-top: 30rpx;
             background-color: #fff;
-            padding: 20rpx;
+            .address_wrap{
+                padding: 20rpx;
+                border-bottom: 1rpx solid #ccc;
+            }
+            .vip_wrap{
+                padding: 20rpx;
+                border-bottom: 1rpx solid #ccc;
+            } 
         }
+
         .app_info_wrap{
             margin-top: 30rpx;
             background-color: #fff;
