--- a/pages/categoryBook/index.wxml
+++ b/pages/categoryBook/index.wxml
@@ -11,8 +11,19 @@
                     wx:key="id"
                     url="/pages/goods_detail/index?goods_id={{item1.id}}"
                     >
-                    <image mode="{{index1===0?'widthFix':'scaleToFill'}}" src="{{item1.mainImgUrl}}"></image>
-                    <view class="goods_name">{{item1.name}}</view>
+                    <!--  上面 图片容器 -->
+                    <view class="goods_img_wrap">
+                        <image mode="{{index1===0?'widthFix':'scaleToFill'}}" src="{{item1.mainImgUrl}}"></image>
+                    </view>
+                    <!--  下面 名字价格容器 -->
+                    <view class="goods_info_wrap">
+                        <view class="goods_name">
+                        {{item1.name}}
+                        </view>
+                        <view class="goods_price">
+                        ￥{{item1.value}}
+                        </view>
+                    </view>
                     </navigator>
                 </view>
             </view>
