--- a/components/Searchinput/Searchinput.less
+++ b/components/Searchinput/Searchinput.less
@@ -9,6 +9,6 @@
         align-items: center;
         background-color: #fff;
         border-radius: 15rpx;
-        color: #666;
+        color: purple;
     }
 }
