--- a/components/Searchinput/Searchinput.wxml
+++ b/components/Searchinput/Searchinput.wxml
@@ -1,3 +1,3 @@
 <View class="search_input">
-    <navigator url="/pages/search/index" open-type="navigate">搜索</navigator>  
+    <navigator url="/pages/search/index" open-type="navigate">🔍搜索想看的书名</navigator>  
 </View>
