--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -1,32 +1,30 @@
 page {
-  height: 100%;
+  background-color: #dedede;
 }
 .cates {
   height: 100%;
 }
 .cates .container {
-  padding: 10rpx 10rpx;
+  padding: 10rpx;
 }
 .cates .container navigator {
-  overflow: hidden;
   float: left;
   width: 50%;
 }
-.cates .container navigator:nth-child(1),
-.cates .container navigator:nth-child(2) {
-  border-bottom: 10rpx solid #fff;
-}
 .cates .container navigator:nth-child(2),
-.cates .container navigator:nth-child(5),
-.cates .container navigator:nth-child(7),
-.cates .container navigator:nth-child(9) {
-  border-left: 10rpx solid #fff;
+.cates .container navigator:nth-child(4),
+.cates .container navigator:nth-child(6),
+.cates .container navigator:nth-child(8) {
+  border-left: 25rpx solid #dedede;
 }
 .cates .container navigator image {
   width: 100%;
+  border-radius: 20rpx;
 }
 .cates .container .text {
   justify-content: center;
   display: flex;
   color: var(--themeColor);
+  font-weight: 900;
+  font-size: 35rpx;
 }
