--- a/pages/categoryBook/index.less
+++ b/pages/categoryBook/index.less
@@ -1,5 +1,6 @@
 page{
     height: 100%;
+    background-color: #dedede;
 }
 .cates{
     height: 100%;
@@ -7,24 +8,29 @@ page{
                 padding: 10rpx 10rpx;
                 .goods_list{
                     navigator{
-                        // 清除浮动
-                        overflow: hidden;
                         float: left;
                         width: 50%;
+                        &:nth-child(even){
+                            border-left: 20rpx solid #dedede;
+                        }
                     .goods_img_wrap{
                         image{
                             width: 100%;
+                            border-radius: 20rpx;
                         } 
                     }
                     .goods_info_wrap{
                         display: flex;
                         justify-content: center;
                         .goods_name{
-                            
+                            font-weight: 900;
+                            font-size: 32rpx;
+                            color: black;
                         }
                         .goods_price{
                             color: var(--themeColor);
                             font-size: 32rpx;
+                            font-weight: 900;
                         }
                     }
                 }
