--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,3 +1,6 @@
+page {
+  background-color: #dedede;
+}
 .index_zhiding {
   padding: 10rpx 10rpx;
   display: flex;
@@ -16,18 +19,21 @@
 }
 .index_swiper swiper image {
   width: 100%;
+  border-radius: 15rpx;
 }
 .index_cate {
   display: flex;
 }
 .index_cate navigator {
-  padding: 10rpx 10rpx;
+  padding: 0rpx 10rpx;
   flex: 1;
 }
-.index_cate navigator text {
+.index_cate navigator .text {
   justify-content: center;
+  color: purple;
   display: flex;
-  color: var(--themeColor);
+  font-size: 35rpx;
+  font-weight: 900;
 }
 .index_cate navigator image {
   width: 100%;
@@ -37,36 +43,23 @@
 }
 .index_floor .floor_group .floor_title image {
   width: 100%;
+  height: 240rpx;
+  border-radius: 15rpx;
 }
 .index_floor .floor_group .floor_list {
   padding: 10rpx 10rpx;
 }
 .index_floor .floor_group .floor_list navigator {
-  overflow: hidden;
   float: left;
   width: 50%;
-  /* 后五个超链接 */
-  /* 1 2 3 4 四个超链接 */
-  /* 2 4 6 三个超链接 */
-}
-.index_floor .floor_group .floor_list navigator:nth-last-child(-n+5) {
-  /* 原图的宽高 232 *386 */
-  height: 450rpx ;
-}
-.index_floor .floor_group .floor_list navigator:nth-child(1) {
-  height: 450rpx ;
-}
-.index_floor .floor_group .floor_list navigator:nth-child(1),
-.index_floor .floor_group .floor_list navigator:nth-child(2),
-.index_floor .floor_group .floor_list navigator:nth-child(3),
-.index_floor .floor_group .floor_list navigator:nth-child(4) {
-  border-bottom: 10rpx solid #fff;
+  border-top: 5rpx solid #dedede;
 }
 .index_floor .floor_group .floor_list navigator:nth-child(2),
 .index_floor .floor_group .floor_list navigator:nth-child(4),
 .index_floor .floor_group .floor_list navigator:nth-child(6) {
-  border-left: 10rpx solid #fff;
+  border-left: 10rpx solid #dedede;
 }
 .index_floor .floor_group .floor_list navigator image {
   width: 100%;
+  border-radius: 20rpx;
 }
