--- a/pages/search/index.less
+++ b/pages/search/index.less
@@ -10,6 +10,7 @@ page{
         flex: 1;
         height: 100%;
         padding-left: 30rpx;
+        border-radius: 10rpx;
     }
     button{
         width: 110rpx;
