[master] change vip type

--- a/pages/vip/index.wxml
+++ b/pages/vip/index.wxml
@@ -21,11 +21,11 @@
         <view  class="vip_main">
             <!-- 4种会员 -->
             <view class="vip_kind">
-                <view class="vip_type">
-                        <view class="vip_name">状元卡</view>
-                        <view class="vip_price">￥508/年</view>
+                <view class="vip_type {{item.id === 1 ? '' : 'vip_type1'}}" wx:for-items="{{vipList}}" bindtap="buyVip" data-id="{{item.id}}">
+                        <view class="vip_name">{{item.name}}</view>
+                        <view class="vip_price">￥{{item.price}}/年</view>
                 </view>
-                <view class="vip_type vip_type1">
+                <!-- <view class="vip_type vip_type1">
                         <view class="vip_name">榜眼卡</view>
                         <view class="vip_price">￥328/年</view>
                 </view>
@@ -36,7 +36,7 @@
                 <view class="vip_type vip_type1">
                         <view class="vip_name">体验卡</view>
                         <view class="vip_price">￥0.01/年</view>
-                </view>
+                </view> -->
             </view>
         </view>
     </view>
