--- a/pages/pay/index.less
+++ b/pages/pay/index.less
@@ -76,6 +76,20 @@ page{
         }
       }
     }
+    .freight_remaining{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 30rpx;
+      background-color: #fff;
+      border-radius: 20rpx;
+      .freight_remaining{
+          
+      }
+      .freight_remaining{
+          
+      }
+  }
   }
 
   .footer_tool {
