--- a/pages/pay/index.wxml
+++ b/pages/pay/index.wxml
@@ -33,8 +33,13 @@
                         </view>	
                     </view>	
                 </view>	
-            </view>	
+            </view>
     </view>	
+    <!-- 运费券剩余 -->
+    <view  class="freight_remaining">
+        <view class="freight_remaining">我的运费券剩余：</view>
+        <view class="freight_remaining">100 张</view>
+    </view>
 </view>
 
 <!-- 底部工具栏 -->
