--- a/pages/freight/freight.wxss
+++ b/pages/freight/freight.wxss
@@ -1,1 +1,63 @@
-/* pages/freight/freight.wxss */
+page {
+  padding-bottom: 90rpx;
+  background-color: #edece8;
+}
+.vip_wrap {
+  position: relative;
+}
+.vip_wrap .vip_main {
+  position: absolute;
+  width: 90%;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 40rpx;
+}
+.vip_wrap .vip_main .vip_kind {
+  display: flex;
+  background-color: #fff;
+}
+.vip_wrap .vip_main .vip_kind .vip_type {
+  flex: 1;
+  text-align: center;
+  padding: 20rpx 0rpx;
+}
+.vip_wrap .vip_main .vip_kind .vip_type .freight_name {
+  font-size: 30rpx;
+  padding: 10rpx 0;
+}
+.vip_wrap .vip_main .vip_kind .vip_type .freight_price {
+  font-size: 35rpx;
+  color: var(--themeColor);
+  padding: 10rpx 0;
+}
+.vip_wrap .vip_main .vip_kind .vip_type1 {
+  border-left: 10px solid #edece8;
+}
+.vip_wrap .vip_main .freight_remaining {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30rpx;
+  background-color: #fff;
+  border-radius: 20rpx;
+}
+.footer_tool {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 90rpx;
+  background-color: #fff;
+  display: flex;
+  border-top: 1rpx solid #ccc;
+}
+.order_pay_wrap {
+  flex: 3;
+  background-color: var(--themeColor);
+  color: #fff;
+  font-size: 32rpx;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
