--- a/pages/order/index.wxml
+++ b/pages/order/index.wxml
@@ -7,15 +7,15 @@
         
         <view class="order_no_row">
             <view class="order_no_text">订单编号</view>
-            <view class="order_on_value">{{item.order_number}}</view>
+            <view class="order_on_value">{{item.orderNum}}</view>
         </view>
         <view class="order_price_row">
             <view class="order_price_text">订单价格</view>
-            <view class="order_price_value">￥{{item.order_price}}</view>
+            <view class="order_price_value">￥{{item.totalPrice}}</view>
         </view>
         <view class="order_time_row">
             <view class="order_time_text">订单日期</view>
-            <view class="order_time_value">{{item.create_time_cn}}</view>
+            <view class="order_time_value">{{item.created_at}}</view>
         </view>
         
         </view>
