--- a/app.wxss
+++ b/app.wxss
@@ -11,7 +11,7 @@ page,view,text,swiper,swiper-item,image,navigator{
 */
 page{
     /*定义主题颜色*/
-    --themeColor:#eb4450;
+    --themeColor:#fff;
     /*定义统一字体大小*/
     font-size: 28rpx;
 }
