--- a/components/Searchinput/Searchinput.less
+++ b/components/Searchinput/Searchinput.less
@@ -1,14 +1,14 @@
 .search_input{
     height: 90rpx;
-    padding: 10rpx;
-    background-color: var(--themeColor);
+    padding: 0 10rpx;
+    background-color: #dedede;
     navigator{
         height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         background-color: #fff;
-        border-radius: 15rpx;
         color: purple;
+        border-radius: 15rpx;
     }
 }
