[master] add freight coupon list

--- a/pages/freight/freight.wxml
+++ b/pages/freight/freight.wxml
@@ -3,15 +3,15 @@
         <view  class="vip_main">
             <!-- 4种运费券 -->
             <view class="vip_kind">
-                <view class="vip_type {{item.id === 1 ? '' : 'vip_type1'}}" wx:for-items="{{vipList}}" bindtap="buyVip" data-id="{{item.id}}">
-                        <view class="freight_name">1张</view>
-                        <view class="freight_price">￥10</view>
+                <view class="vip_type {{item.id === 1 ? '' : 'vip_type1'}}" wx:for-items="{{couponList}}" bindtap="buyVip" data-id="{{item.id}}">
+                        <view class="freight_name">{{item.time}}张</view>
+                        <view class="freight_price">￥{{item.price}}</view>
                 </view>
             </view>
             <!-- 运费券剩余 -->
             <view  class="freight_remaining">
                         <view class="freight_remaining">我的运费券剩余：</view>
-                        <view class="freight_remaining">100 张</view>
+                        <view class="freight_remaining">{{trafficTicketCount}} 张</view>
             </view>
         </view>
     </view>
